добавил кастомный тег get_categories, отвечает за вывод категорий магазинов

--- a/cryptomap/templates/inc/_sidebar.html
+++ b/cryptomap/templates/inc/_sidebar.html
@@ -1,4 +1,6 @@
+{% load shops_tags%}
 <div class="list-group">
+  {% get_categories as categories%}
   {% for category in categories %}
   <a href="{% url 'shops_by_category' category.pk %}" class="list-group-item list-group-item-action">{{category.title}}</a>
   {% endfor %}
