--- a/cryptomap/templates/inc/_sidebar.html
+++ b/cryptomap/templates/inc/_sidebar.html
@@ -2,6 +2,6 @@
 <div class="list-group">
   {% get_categories as categories%}
   {% for category in categories %}
-  <a href="{% url 'shops_by_category' category.pk %}" class="list-group-item list-group-item-action">{{category.title}}</a>
+  <a href="{{ category.get_absolute_url }}" class="list-group-item list-group-item-action">{{category.title}}</a>
   {% endfor %}
 </div>
