--- a/cryptomap/shops/templates/shops/category.html
+++ b/cryptomap/shops/templates/shops/category.html
@@ -26,7 +26,7 @@
         <h5 class="card-title">{{item.shop.title}}</h5>
         <p class="card-text">{{item.shop.address}}</p>
         <p class="card-text">{{item.description| truncatewords:50}}</p>
-        <a href="/" class="btn btn-primary">Посмотреть детальнее</a>
+        <a href="{{ item.get_absolute_url }}" class="btn btn-primary">Посмотреть детальнее</a>
       </div>
     </div>
   </div>
