--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -11,5 +11,8 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Добавить магазин</a></li>
             </ul>
         </div>
+        <span class="navbar-text">
+        1 BTC = {{ btc_price }}
+      </span>
     </div>
 </nav>
