добавлен вывод продуктов по категориям, исправлен переход в магазин и переход в конкретный продукт

--- a/cryptomap/products/templates/products/all_products_by_category.html
+++ b/cryptomap/products/templates/products/all_products_by_category.html
@@ -10,7 +10,6 @@
 
 {% block content %}
 
-
 {% for product_description in productsDescriptions %}
 <div class="card mb-3 mt-3" style="max-width: 740px;">
   <div class="row g-0">
@@ -24,10 +23,17 @@
     <div class="col-ml-8 ">
       <div class="card-body mr-1 ml-5">
         <h5 class="card-title">{{product_description.product.title}}</h5>
-        <p class="card-text">{{product_description.product.shop}}</p>
+<!--        вывод кнопки магазина и переход на нее-->
+        {% for shop_description in shopsDescriptions%}
+            {% if product_description.product.shop.title == shop_description.shop.title%}
+            <a href="{{ shop_description.get_absolute_url }}">{{shop_description.shop.title}}</a>
+            {% endif %}
+        {% endfor %}
+
         <p class="card-text">{{product_description.description}}</p>
         <p class="card-text">{{product_description.product.price_rub|floatformat:"0" }} рублей</p>
         <p class="card-text">{{product_description.product.price_btc}} btc</p>
+        <a href="{{ product_description.product.get_absolute_url }}" class="btn btn-primary">Поподробнее</a>
         <p class="card-text"><small class="text-muted">Размещен: {{product_description.product.created_at }}</small></p>
       </div>
     </div>
