Добавил форму для создания магазина и заполнения описания, поправить поля

--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -41,7 +41,7 @@
                     </ul>
                 </li>
 
-                <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Добавить магазин</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'add_shops' %}">Добавить магазин</a></li>
             </ul>
         </div>
         <span class="navbar-text">
