сделал модель кастомного юзера, обновил бд

--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -45,7 +45,11 @@
             </ul>
         </div>
         <span class="navbar-text">
-        1 BTC = {{ btc_price }}
-      </span>
+            1 BTC = {{ btc_price }}
+        </span>
+
+        <span class="navbar-text">
+            <a href=""> Register</a> | <a href="">Login</a>
+         </span>
     </div>
 </nav>
