--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -49,7 +49,7 @@
         </span>
 
         <span class="navbar-text">
-            <a href=""> Register</a> | <a href="">Login</a>
+            <a href="{% url 'register' %}"> Register</a> | <a href="">Login</a>
          </span>
     </div>
 </nav>
