Добавлен logout и вывод имя юзера в навбар

--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -49,7 +49,11 @@
         </span>
 
         <span class="navbar-text">
-            <a href="{% url 'register' %}"> Register</a> | <a href="">Login</a>
-         </span>
+            {% if request.user.is_authenticated %}
+                <p>Hello, {{ request.user.username }} | <a href="{% url 'logout' %}">Logout</a></p>
+            {% else %}
+                <p><a href="{% url 'register' %}">Register</a> | <a href="#">Login</a></p>
+            {% endif %}
+        </span>
     </div>
 </nav>
