поправил страницу регистрации логина и аккаунта

--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -13,16 +13,16 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Карта</a></li>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                <li class="nav-item"><a class="nav-link text-dark" href="{% url 'home' %}">Главная</a></li>
+                <li class="nav-item"><a class="nav-link text-dark" href="{% url 'home' %}">Карта</a></li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{% url 'home' %}" id="navbarDropdownMenuLink" role="button"
+                    <a class="nav-link dropdown-toggle text-dark" href="{% url 'home' %}" id="navbarDropdownMenuLink" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Категории магазинов
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu text-dark" aria-labelledby="navbarDropdownMenuLink">
                         {% for category in categories %}
                         <li><a class="dropdown-item" href="{{ category.get_absolute_url }}">{{category.title}}</a></li>
                         {% endfor %}
@@ -30,32 +30,31 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{% url 'home' %}" id="navbarDropdownMenuLink2" role="button"
+                    <a class="nav-link dropdown-toggle text-dark" href="{% url 'home' %}" id="navbarDropdownMenuLink2" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Категории товаров
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <ul class="dropdown-menu text-dark" aria-labelledby="navbarDropdownMenuLink">
                         {% for product_category in products_categories %}
                         <li><a class="dropdown-item" href="{{ product_category.get_absolute_url }}">{{product_category.title}}</a></li>
                         {% endfor %}
                     </ul>
                 </li>
                 {% if request.user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'add_shops' %}">Добавить магазин</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="{% url 'add_shops' %}">Добавить магазин</a></li>
                 {% endif %}
             </ul>
         </div>
-        <span class="navbar-text">
+        <span class="navbar-text p-2 text-dark">
             1 BTC = {{ btc_price }}
         </span>
 
         <span class="navbar-text">
             {% if request.user.is_authenticated %}
-                <p>Hello, {{ request.user.username }} |
-                <a href="{% url 'logout' %}">Logout</a> |
-                <a href="{% url 'account' %}">Account</a></p>
+                <a class="p-2 text-dark" href="{% url 'account' %}" >{{ request.user.username }}<a> |
+                <a class="p-2 text-dark" href="{% url 'logout' %}">Logout</a>
             {% else %}
-                <p><a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}">Login</a></p>
+                <a class="btn btn-outline-primary" href="{% url 'register' %}">Register</a> | <a class="p-2 text-dark outline" href="{% url 'login' %}">Log in</a>
             {% endif %}
         </span>
     </div>
