--- a/cryptomap/user/templates/user/account.html
+++ b/cryptomap/user/templates/user/account.html
@@ -10,37 +10,39 @@
 
 {% block content %}
 
-<h2>Account</h2>
-<form method="post">
 
-    {% csrf_token %}
+<form class="form-signin" method="post">{% csrf_token %}
+
+    <h1 class="h3 mb-3 fw-normal ">Account</h1>
+
+    <div class="form-floating mb-3">
+        <input type="email" name="email" class="form-control" id="inputEmail" placeholder="name@example.com" value={{account_form.initial.email}}>
+        <label for="inputEmail">Email address</label>
+    </div>
+    <div class="form-floating mb-3">
+        <input type="text" name="username" class="form-control" id="floatingPassword" placeholder="Password" value={{account_form.initial.username}}>
+        <label for="floatingPassword">Username</label>
+    </div>
 
     {% for field in account_form  %}
-
         <p>
-            {{ field.label_tag }}
-            {{ field }}
-
-            {% if field.help_text %}
-                <small style="color: grey;">{{ field.help_text }}</small>
-            {% endif %}
+            {% for error in field.errors  %}
+                <p style="color: red;">{{ error }}</p>
+            {% endfor %}
         </p>
-
-    {% endfor %}
-
-    {% for field in account_form  %}
-        {% for error in field.errors  %}
-            <p style="color: red;">{{ error }}</p>
-        {% endfor %}
     {% endfor %}
 
     {% if account_form.non_field_errors %}
-    <div style="color:red;">
-        <p>{{ account_form.non_field_errors }}</p>
-    </div>
+        <div style="color:red;">
+            <p>{{ account_form.non_field_errors }}</p>
+        </div>
     {% endif %}
 
-    <button type="submit">Save changes</button>
+    {% if success_message %}
+        <p style="color:green; text-align:center;">{{success_message}}</p>
+    {% endif %}
+
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Save</button>
 </form>
 
-{% endblock %}
+{% endblock content%}
