--- a/cryptomap/user/templates/user/account.html
+++ b/cryptomap/user/templates/user/account.html
@@ -42,7 +42,11 @@
         <p style="color:green; text-align:center;">{{success_message}}</p>
     {% endif %}
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Save</button>
+    <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Save</button>
 </form>
+
+<div class=".d-flex flex-column">
+    <a class="m-auto mb-3" href="{% url 'password_change' %}">Change password</a>
+</div>
 
 {% endblock content%}
