--- a/cryptomap/products/templates/products/view_product.html
+++ b/cryptomap/products/templates/products/view_product.html
@@ -21,6 +21,12 @@
         <p class="card-text">{{products_descriptions.description}}</p>
         <p class="card-text">{{products.price_rub|floatformat:"0" }} рублей</p>
         <p class="card-text">{{products.price_btc}} btc</p>
+        <hr>
+        {% if request.user.is_authenticated %}
+          <a href="{% url 'add_to_tracked_items' product_id=products.id%}"><button class=" mb-3 btn btn-primary">Отслеживать</button></a>
+        {% else %}
+           <a class="btn btn-outline-primary" href="{% url 'register' %}">Register</a> | <a class="p-2 text-dark outline" href="{% url 'login' %}">Log in</a>
+        {% endif %}
         <p class="card-text"><small class="text-muted">Размещен: {{products.created_at }}</small></p>
       </div>
     </div>
