--- a/cryptomap/user/templates/user/account.html
+++ b/cryptomap/user/templates/user/account.html
@@ -14,35 +14,33 @@
 <form class="form-signin" method="post">{% csrf_token %}
 
     <h1 class="h3 mb-3 fw-normal ">Account</h1>
-
-    <a class="m-auto mb-3" href="{% url 'password_change' %}">Tracker</a>
-
-
     <div class="form-floating mb-3">
-        <input type="email" name="email" class="form-control" id="inputEmail" placeholder="name@example.com" value={{account_form.initial.email}}>
+        <input type="email" name="email" class="form-control" id="inputEmail" placeholder="name@example.com"
+               value={{account_form.initial.email}}>
         <label for="inputEmail">Email address</label>
     </div>
     <div class="form-floating mb-3">
-        <input type="text" name="username" class="form-control" id="floatingPassword" placeholder="Password" value={{account_form.initial.username}}>
+        <input type="text" name="username" class="form-control" id="floatingPassword" placeholder="Password"
+               value={{account_form.initial.username}}>
         <label for="floatingPassword">Username</label>
     </div>
 
-    {% for field in account_form  %}
-        <p>
-            {% for error in field.errors  %}
-                <p style="color: red;">{{ error }}</p>
-            {% endfor %}
-        </p>
+    {% for field in account_form %}
+    <p>
+        {% for error in field.errors %}
+    <p style="color: red;">{{ error }}</p>
+    {% endfor %}
+    </p>
     {% endfor %}
 
     {% if account_form.non_field_errors %}
-        <div style="color:red;">
-            <p>{{ account_form.non_field_errors }}</p>
-        </div>
+    <div style="color:red;">
+        <p>{{ account_form.non_field_errors }}</p>
+    </div>
     {% endif %}
 
     {% if success_message %}
-        <p style="color:green; text-align:center;">{{success_message}}</p>
+    <p style="color:green; text-align:center;">{{success_message}}</p>
     {% endif %}
 
     <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Save</button>
