добавил форму обратной связи, smpt отсылает на почту письмо

--- a/cryptomap/tracker/templates/tracker/view_tracker.html
+++ b/cryptomap/tracker/templates/tracker/view_tracker.html
@@ -41,7 +41,7 @@
       <td>{% multiply price_btc product.beginning_price_btc %}</td>
       <td>{{product.price_change}} %</td>
       <td align="center">
-        <button class="btn btn-success form-control" onClick="editUser({{user.id}})" data-toggle="modal"
+        <button class="btn btn-success form-control" onClick="editProduct({{product.id}})" data-toggle="modal"
                 data-target="#myModal")>Изменить</button>
       </td>
       <td align="center">
