--- a/cryptomap/user/templates/user/account.html
+++ b/cryptomap/user/templates/user/account.html
@@ -50,4 +50,6 @@
     <a class="m-auto mb-3" href="{% url 'password_change' %}">Change password</a>
 </div>
 
+<a class="m-auto mb-3" type="submit" href="{% url 'contact_form' %}">Обратная связь</a>
+
 {% endblock content%}
