--- a/cryptomap/templates/base.html
+++ b/cryptomap/templates/base.html
@@ -1,14 +1,31 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{% static 'bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="{% static 'bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
 
-    <title>{% block title %}Crypto map{% endblock %}</title>
-  </head>
-  <body>
+  <title>{% block title %}Crypto map{% endblock %}</title>
+
+<!--    <style type="text/css">-->
+<!--      /* Always set the map height explicitly to define the size of the div-->
+<!--       * element that contains the map. */-->
+<!--      #map {-->
+<!--        height: 100%;-->
+<!--      }-->
+
+<!--      /* Optional: Makes the sample page fill the window. */-->
+<!--      html,-->
+<!--      body {-->
+<!--        height: 100%;-->
+<!--        margin: 0;-->
+<!--        padding: 0;-->
+<!--      }-->
+<!--    </style>-->
+
+</head>
+<body>
 
 {% include 'inc/_nav.html '%}
 
@@ -25,9 +42,40 @@
       </div>
     </div>
   </div>
+
+<!--    <div id="map"></div>-->
+<!--    <script>-->
+<!--      let map;-->
+
+<!--      function initMap() {-->
+<!--        var myMap = new google.maps.Map(document.getElementById("map"), {-->
+<!--          center: { lat: 51.513416, lng: -0.129761 },-->
+<!--          zoom: 11,-->
+<!--        });-->
+<!--        var marker = new google.maps.Marker({-->
+<!--          position: { lat: 51.513416, lng: -0.129761 },-->
+<!--          map: myMap,-->
+<!--          title: "Hello World!",-->
+<!--        });-->
+
+<!--        var info = new google.maps.InfoWindow({-->
+<!--          content: '<h3>Твое место</h3>'-->
+<!--        });-->
+
+<!--        marker.addListener("click", function() {-->
+<!--          info.open(myMap, marker);-->
+<!--        });-->
+<!--      }-->
+<!--    </script>-->
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+
+
+     {% block extend_footer %}
+
+  {% endblock %}
+
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="{% static 'bootstrap/css/bootstrap.min.css'%}"></script>
-  </body>
+</body>
 </html>
