--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                 <li class="nav-item"><a class="nav-link text-dark" href="{% url 'home' %}">Главная</a></li>
-                <li class="nav-item"><a class="nav-link text-dark" href="{% url 'home' %}">Карта</a></li>
+                <li class="nav-item"><a class="nav-link text-dark" href="{% url 'map' %}">Карта</a></li>
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{% url 'home' %}" id="navbarDropdownMenuLink" role="button"
