поправил верстку карты

--- a/cryptomap/map/templates/map/map.html
+++ b/cryptomap/map/templates/map/map.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-<h3 id="map">Django Google Maps API Demo - Map</h3>
+<h3 >Django Google Maps API Demo - Map</h3>
 
 <div class="map-container">
    <div id="map-route"></div>
