маркеры с названиями магазинов

--- a/cryptomap/map/templates/map/map.html
+++ b/cryptomap/map/templates/map/map.html
@@ -20,8 +20,10 @@
 {% endblock %}
 
 {% block extend_footer %}
+
 <script type="text/javascript">
 
+    var markers = {{marker|safe}}
     var google_api_key = "{{google_api_key|safe}}";
 
 </script>
