--- a/cryptomap/templates/inc/_nav.html
+++ b/cryptomap/templates/inc/_nav.html
@@ -17,7 +17,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                 <li class="nav-item"><a class="nav-link text-dark" href="{% url 'home' %}">Главная</a></li>
                 <li class="nav-item"><a class="nav-link text-dark" href="{% url 'map' %}">Карта</a></li>
-
+                <li class="nav-item"><a class="nav-link text-dark" href="{% url 'prediction' %}">Прогноз</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="{% url 'home' %}" id="navbarDropdownMenuLink" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
